Web UI Phase 0+A: housekeeping + core controls
Phase 0 — Housekeeping:
- Rewrite AGENT_INSTRUCTIONS.md for Go (remove Kotlin/Gradle refs)
- Update CLAUDE.md with Go architecture, mark phases 1-8,10 done
- Update PROGRESS.md with Web UI Feature Parity section
- Add DONE markers to all completed phases in AGENT_PLAN_V3.md

Phase A — Core Controls:
- Go API: add POST /apps/{name}/stop and /apps/{name}/start routes
- Go runtime: add StopApp() and RestartApp() methods
- Fix restart handler (was TODO no-op, now stops + restarts container)
- React: ConfirmModal reusable component (dialog element)
- React: NamespaceControls (Start/Stop/Reload with confirm)
- React: AppTable per-app action buttons (Stop/Start/Restart/Logs)
- React: Docker error banner with retry + install link
- Fix vitest config to exclude Playwright tests directory